[project]
name = "gauge-lib"
version = "0.1.0"
description = "Shared library for NeurIPS 2026 gauge-fixed energy control experiments."
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gauge_lib"]
